# benchFFTS

./: CMakeLists.txt  README  README.md  bench.c  make_2005_32.cmd  make_2005_64.cmd  make_2010_32.cmd  make_2010_64.cmd  make_2015_32.cmd  make_2015_64.cmd  make_mingw.cmd  test_debug.cmd  test_gcc.sh  test_mingw.cmd  test_release.cmd
cmake/: libbench2-config.h.cmake
ffts/src/: sse.s
libbench2/: CMakeLists.txt
libbench2/cmake/: libbench2-config.h.cmake
src/: ffts_real.c  ffts_trig.c
